# Comite-de-Inversiones-Automatizado

./: README.md  crew.py  data_extraction.py  data_extraction.py.py  main.py  pdf_export.py  pyproject.toml
